[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/PrStart.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://PowerUp.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 1 )

[node name="Panel" type="Panel"]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
rect_min_size = Vector2( 30, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Powerup" type="Panel" parent="Button"]
visible = false
margin_left = -13.9405
margin_top = -131.541
margin_right = 316.059
margin_bottom = -16.5409
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button/Powerup"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "[text]"
align = 1
valign = 1

[connection signal="mouse_exited" from="." to="." method="_on_Panel_mouse_exited"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
